syntax = "proto3";

package gophkeeper;

option go_package = "pkg/client/gophkeeper";

enum DataType {
  DATA_TYPE_BINARY = 0;
  DATA_TYPE_CREDENTIALS = 1;
  DATA_TYPE_CARD_CREDENTIALS = 2;
}

message DataResource {
  optional string id = 1;
  optional DataType type = 2;
  optional bytes data = 3;
  optional string name = 4;
}

message CardData {
  optional string number = 1;
  optional string cardholder = 2;
  optional string expiry_date = 3;
  optional string security_code = 4;
}

message PasswordData {
  optional string username = 1;
  optional string password = 2;
  optional string uri = 3;
  optional string description = 4;
}
